--- a/crue/civiclapp/templates/civiclapp/home.html
+++ b/crue/civiclapp/templates/civiclapp/home.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>🏄 CivicLab 2023/2024 - repères de crues augmentés</title>
+    <title>🏄 MétroSurf 🏄</title>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="{% static 'civiclapp/style.css' %}">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
