--- a/crue/civicmap/static/civicmap/style.css
+++ b/crue/civicmap/static/civicmap/style.css
@@ -30,4 +30,33 @@ body, html {
     z-index: 1000; /* S'assure que le titre est au-dessus de tout autre contenu de la carte */
     text-align: center;
     color: #e9ff42;
+    font-size: 3vh;
+}
+
+#titre-mobile {
+    position: absolute; /* Positionne le titre de manière absolue par rapport à son conteneur */
+    top: 10px; /* Distance du haut du conteneur */
+    width: 80%;
+    transform: translateX(12%);
+    background-color: rgba(28, 104, 136, 0.75); /* Fond semi-transparent */
+    padding: 5px 10px; /* Espacement intérieur */
+    border-radius: 5px; /* Bords arrondis */
+    z-index: 1000; /* S'assure que le titre est au-dessus de tout autre contenu de la carte */
+    text-align: center;
+    color: #e9ff42;
+    font-size: 3vh;
+}
+
+#legende {
+    position: absolute; /* Positionne le titre de manière absolue par rapport à son conteneur */
+    bottom: 40px; /* Distance du bas du conteneur */
+    left: 50%; /* Centre le titre horizontalement */
+    transform: translateX(-50%); /* Ajuste le centrage en déplaçant le titre de 50% de sa propre largeur vers la gauche */
+    background-color: rgba(28, 104, 136, 0.75); /* Fond semi-transparent */
+    padding: 5px 10px; /* Espacement intérieur */
+    border-radius: 5px; /* Bords arrondis */
+    z-index: 1000; /* S'assure que le titre est au-dessus de tout autre contenu de la carte */
+    text-align: center;
+    color: #e9ff42;
+    font-size: 3vh;
 }
