--- a/crue/civiclapp/static/civiclapp/style_responsive.css
+++ b/crue/civiclapp/static/civiclapp/style_responsive.css
@@ -1,23 +1,16 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden; /* Empêche le défilement */
-}
-
 /* Swiper */
 .swiper-pagination {
-  height: 60px; 
+  height: 5vh; 
 }
 
 .swiper-pagination-bullet {
-  width: 20px; /* Largeur du point */
-  height: 20px; /* Hauteur du point */
+  width: 5vw; /* Largeur du point */
+  height: 3vh; /* Hauteur du point */
 }
 
 .swiper-pagination-bullet-active {
   background-color: #e9ff42;
 }
-/*-------------------*/
 
 .swiper-slide .conteneur-image {
   height: 100vh; /* Hauteur totale de la fenêtre de visualisation */
@@ -27,11 +20,7 @@ html, body {
   background-repeat: no-repeat; /* Ne pas répéter l'image */
 }
 
-.conteneur-image {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-}
+/* SLIDE N°2 */
 
 .text-page_2_1 {
   text-align: center;
@@ -42,7 +31,52 @@ html, body {
   grid-column: 1 / 3;
 }
 
-.image-page_2_1 {
-  width: 50%; /* Ajustez selon le besoin */
-  grid-column: 1 / 2;
+.text-page_2_2 {
+  text-align: center;
+  color: #e9ff42; /* Couleur du texte */
+  z-index: 2; /* Assure que le texte est au-dessus de l'image */
+  font-size: 8vw;
 } 
+
+/* SLIDE N°3 */
+
+.text-page_3_1 {
+  text-align: center;
+  color: #e9ff42; /* Couleur du texte */
+  z-index: 2; /* Assure que le texte est au-dessus de l'image */
+  font-size: 8vw;
+  height: 10vh;
+}
+
+.text-page_3_1_1 {
+  text-align: center;
+  color: #e9ff42; /* Couleur du texte */
+  z-index: 2; /* Assure que le texte est au-dessus de l'image */
+  font-size: 4vw;
+  height: 10vh;
+}
+
+.text-page_3_2 {
+  text-align: center;
+  color: #e9ff42;
+  z-index: 2;
+  font-size: 5vw;
+  height: 10vh;
+}
+
+.text-page_3_3 {
+  text-align: center;
+  color: #e9ff42;
+  z-index: 2;
+  font-size: 4vw;
+  height: 20vh;
+}
+
+.image-page_3_1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 2;
+  width: 85vw;
+  height: 35vh;
+}
