--- a/crue/civiclapp/templates/civiclapp/slide_2.html
+++ b/crue/civiclapp/templates/civiclapp/slide_2.html
@@ -5,7 +5,7 @@
 <div class="container-fluid d-flex flex-column full-height">
     <!-- Ligne 1 -->
     <div class="row flex-grow-05">
-        <div class="col-12 p-3 text-page_2_1">L'isère en Live</div>
+        <div class="col-12 p-3 text-page_2_1">{{ station.riviere }} en Live</div>
     </div>
     <!-- Lignes 2, 3, et 4 -->
     <div class="row double-height">
