--- a/crue/civicmap/static/civicmap/style.css
+++ b/crue/civicmap/static/civicmap/style.css
@@ -50,13 +50,27 @@ body, html {
 #legende {
     position: absolute; /* Positionne le titre de manière absolue par rapport à son conteneur */
     bottom: 40px; /* Distance du bas du conteneur */
+    left: 90%; /* Centre le titre horizontalement */
+    transform: translateX(-50%); /* Ajuste le centrage en déplaçant le titre de 50% de sa propre largeur vers la gauche */
+    background-color: rgba(28, 104, 136, 0.75); /* Fond semi-transparent */
+    padding: 5px 10px; /* Espacement intérieur */
+    border-radius: 5px; /* Bords arrondis */
+    z-index: 1000; /* S'assure que le titre est au-dessus de tout autre contenu de la carte */
+    text-align: left;
+    color: #e9ff42;
+    font-size: 3vh;
+}
+
+#legende-mobile {
+    position: absolute; /* Positionne le titre de manière absolue par rapport à son conteneur */
+    bottom: 40px; /* Distance du bas du conteneur */
     left: 50%; /* Centre le titre horizontalement */
     transform: translateX(-50%); /* Ajuste le centrage en déplaçant le titre de 50% de sa propre largeur vers la gauche */
     background-color: rgba(28, 104, 136, 0.75); /* Fond semi-transparent */
     padding: 5px 10px; /* Espacement intérieur */
     border-radius: 5px; /* Bords arrondis */
     z-index: 1000; /* S'assure que le titre est au-dessus de tout autre contenu de la carte */
-    text-align: center;
+    text-align: left;
     color: #e9ff42;
     font-size: 3vh;
 }
