--- a/crue/civiclapp/templates/civiclapp/debit.html
+++ b/crue/civiclapp/templates/civiclapp/debit.html
@@ -1,6 +1,6 @@
 <style>
     #logo_debit {
-        height: 20vh;
+        height: 35vh;
     }
 </style>
 
@@ -20,7 +20,7 @@
   /* Fond affichage cristaux liquides */
     <path d="M 976.679688 562.370312 L 1799.21875 562.370312 L 1799.21875 878.229687 L 976.679688 878.229687 Z M 976.679688 562.370312" transform="matrix(.1 0 0 -.16 0 310)" fill="#e9ff42" stroke-width="11.524" stroke-linecap="round" stroke-linejoin="round" stroke="#000" stroke-miterlimit="10" />
     <text x="50%" y="68%" text-anchor="middle" style="font-family: 'DS-Digital', sans-serif;">Débit</text>
-    <text x="50%" y="75%" text-anchor="middle" style="font-family: 'DS-Digital', sans-serif;">2.36 m<tspan dy="-8" font-size="10">3</tspan><tspan dy="8" font-size="15">/s</tspan></text>
+    <text x="50%" y="75%" text-anchor="middle" style="font-family: 'DS-Digital', sans-serif;">{{ station.debit }} m<tspan dy="-8" font-size="10">3</tspan><tspan dy="8" font-size="15">/s</tspan></text>
   
   /* Aiguille */
   <path d="M 136.054688 140.800781 L 142.980469 134.039063 L 78.742188 69.949219" fill="#e9ff42" />
