--- a/crue/civiclapp/templates/civiclapp/slide_2.html
+++ b/crue/civiclapp/templates/civiclapp/slide_2.html
@@ -5,30 +5,34 @@
 <div class="container-fluid d-flex flex-column full-height">
     <!-- Ligne 1 -->
     <div class="row flex-grow-05">
-        <div class="col-12 p-3 text-page_2_1">{{ station.riviere }} en Live</div>
+        {% if station.riviere == "Ruisseau du Domènon" %}
+            <div class="col-12 p-3 text-page_2_1">Domènon en Live</div>
+        {% else %}
+            <div class="col-12 p-3 text-page_2_1">{{ station.riviere }} en Live</div>
+        {% endif %}
     </div>
     <!-- Lignes 2, 3, et 4 -->
-    <div class="row double-height">
-        <div class="col-6 d-flex flex-column">
+    <div class="row">
+        <div class="col-3 d-flex flex-column">
             <!-- Bloc de gauche, toute la hauteur pour les lignes 2, 3, et 4 -->
-            <div class="p-3 full-height">
-                {% include "civiclapp/hauteur.html" %}
+            <div class="hauteur">
+                {% include "civiclapp/hauteur.html" with hauteur=hauteur %}
             </div>
         </div>
-        <div class="col-6 d-flex flex-column">
+        <div class="col-9 d-flex flex-column">
             <!-- Bloc de droite supérieur, 1 de hauteur -->
-            <div class="p-3 height-1">
+            <div class="p-1">
               {% include "civiclapp/vigicrue.html" with data=data %}
             </div>
             <!-- Bloc de droite inférieur, 2 de hauteur -->
-            <div class="p-3 height-2 flex-grow-1">
-                {% include "civiclapp/debit.html" %}
+            <div >
+                {% include "civiclapp/debit.html" with station=station %}
             </div>
         </div>
     </div>
     <!-- Ligne 5 -->
-    <div class="row flex-grow-05">
-        <div class="col-12 p-3 text-page_2_2">Vous êtes curieux ? 👉</div>
+    <div class="row">
+        <div class="col-12 text-page_2_2">Vous êtes curieux ? 👉</div>
     </div>
 </div>
 </div>
