--- a/crue/civiclapp/templates/civiclapp/slider_2.html
+++ b/crue/civiclapp/templates/civiclapp/slider_2.html
@@ -8,13 +8,13 @@
 
 <div class="container">
     <div class="before-after-slider">
-        <img src="{% static 'civiclapp/image-avant.png' %}" alt="Avant" class="before-image">
+        <img src="{% static 'civiclapp/image-avant-2.png' %}" alt="Avant" class="before-image">
         <div class="slider">
             <div class="drag-line">
                 <span class="drag-handle">🏄</span>
             </div>
         </div>
-        <img src="{% static 'civiclapp/image-apres.png' %}" alt="Après" class="after-image">
+        <img src="{% static 'civiclapp/image-apres-2.png' %}" alt="Après" class="after-image">
     </div>
 </div>
 
